internal/xds/translator/testdata/out/xds-ir-sublinear/cors-from-httpcorsfilter.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            foo/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/bar
                  name: first-route
                  route:
                    cluster: first-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.cors:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                      allowCredentials: false
                      allowMethods: GET
                      allowOriginStringMatch:
                      - exact: https://gateway.envoyproxy.io
                      forwardNotMatchingPreflights: false
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
